[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.rm_gallery.core.masonry.api"

[project]
name = "rm-gallery"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "pandas (>=2.2.3,<3.0.0)",
  "pytest (>=8.3.5,<9.0.0)",
  "pyyaml (>=6.0.2,<7.0.0)",
  "loguru (>=0.7.3,<0.8.0)",
  "jsonlines (>=4.0.0,<5.0.0)",
  "transformers (>=4.52.4,<5.0.0)",
  "pydantic (>=2.11.5,<3.0.0)",
  "openai (>=1.85.0,<2.0.0)"
]
