[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "rm-gallery"
version = "0.1.0"
description = ""
authors = ["Sen Huang", "Lipeng Xie", "Haoran Chen", "Boyin Liu", "Qingxu Fu", "Anni Zou", "Jiaji Deng", "Yuhao Cui", "Yunzhou Shi", "Yuan Gao", "Yunpeng Zhai", "Zhuo Zhang", "Li Yu", "Zhaoyang Liu"]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "pandas (>=2.2.3,<3.0.0)",
  "pytest (>=8.3.5,<9.0.0)",
  "pyyaml (>=6.0.2,<7.0.0)",
  "loguru (>=0.7.3,<0.8.0)",
  "jsonlines (>=4.0.0,<5.0.0)",
  "transformers (>=4.52.4,<5.0.0)",
  "pydantic (>=2.11.5,<3.0.0)",
  "openai (>=1.85.0,<2.0.0)",
  "retry (>=0.9.2,<0.10.0)",
  "label-studio (==1.17.0)",
  "py-data-juicer (==1.3.3)",
  "math-verify (>=0.7.0,<0.8.0)"
]
